# Represent-ML-algorithm-by-Tensor-Algebra

./: CMakeLists.txt  README.md  TODO.txt  test.c
ML_Algorithms/Classification/: README.md
ML_Algorithms/Clustering/: README.md
ML_Algorithms/Dimensionality reduction/: README.md
ML_Algorithms/Model selection/: README.md
ML_Algorithms/Preprocessing/: README.md
ML_Algorithms/Regression/: README.md
Tool/elementwise/: add.cpp  makefile2
Tool/khatri_rao/: kr.cpp  main.cpp  mul.cpp
Tool/khatri_rao/khatri_rao_abft/: makefile
Tool/kronecker/kronecker_abft/: main.cpp
Tool/scalar/: 1.sh  makefile
Tool/tensor_times_tensor/: 1 - 副本.sh  1.sh  makefile
data/: test.mtx  test2.mtx
itensor/: CMakeLists.txt  README.md
itensor/MTTKRP/: CMakeLists.txt  main.cpp  mtt.cpp
itensor/eltwise/: check.cpp  load_add.cpp  sampleCharRNN.cpp
itensor/itensor/: itensor.cc
itensor/itensor/itdata/: task_types.h
itensor/khatri_rao/: CMakeLists.txt  load_mul.cpp
itensor/kronecker/: CMakeLists.txt  load_mul.cpp
itensor/mul/: checksum.cpp
itensor/scalar/: load_add.cpp  s.cpp
itensor/tensor/: tensor.cbp  tensor.layout
ml_cafe/: CMakeLists.txt
ml_cafe/networks/: cnn_org.cpp  resnet_org.cpp
ml_ta/: CMakeLists.txt
ml_ta/benchmarks/: CMakeLists.txt  cnn.cpp
ml_tf/: CMakeLists.txt
ml_tf/networks/: CMakeLists.txt
operations/elem/: CMakeLists.txt  run.sh
operations/elem/add/: CMakeLists.txt  add.cpp  data.mtx  read.cpp  run.sh  verify.cpp
operations/elem/add/gdb/: a.out  main.cpp  print.cpp  print.h
operations/elem/div/: CMakeLists.txt  div.cpp  run.sh
operations/elem/mul/: CMakeLists.txt  build.cpp  mul.cpp  run.sh  verify.cpp
operations/elem/sub/: CMakeLists.txt  build.cpp  run.sh  sub.cpp  verify.cpp
operations/eltwise/: CMakeLists.txt
operations/kronecker/: kk.cpp
operations/mul/: CMakeLists.txt  load_mul.cpp  mul.cpp
operations/scalar/: CMakeLists.txt  checksum.cpp
scripts/: MTTKRP_makefile  README  eltwise.sh  kronecker.sh
